--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 list-style-type: none; 
 margin: 0; 
 padding: 0; 
-width: 450px;
+width: 48%;
+float: left;
 }
 
 #sortable li
@@ -25,4 +26,23 @@ text-align: center;
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#salida
+{
+  float: left;
+  width: 50%;
+}
+
+#generar_html
+{
+  background-color: #333;
+  color: #cce;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#salida_html
+{
+  height: 500px;
 }
